# TriviaRefactor

./: .clang-format  CMakeLists.txt  Game.cpp  Game.h  GameRunner.cpp  README.md  main.cc
cmake/: compilersettings.cmake  compilerwarnings.cmake  requirements.cmake
cmake/modules/: clangtidy.cmake  cppcheck.cmake
controller/: CMakeLists.txt  controller.cc  controller.h
env/: Dockerfile  docker.sh
model/: CMakeLists.txt  board.cc  board.h  dice.cc  dice.h  game.cc  game.h  player.cc  player.h
model/test/: CMakeLists.txt  test_board.cc  test_dice.cc  test_game.cc  test_player.cc
test/: hash_test.sh  original_seed_1_and_4_v4.out  original_seed_1_and_4_v5.out  original_seed_1_v3.out  valgrind.sh
view/: CMakeLists.txt  text_view.cc  text_view.h  view_if.h
